# vet-insight-engine

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: .ls_output.txt  main.py
backend/app/api/: .ls_output.txt  __init__.py  documents.py  health.py
backend/app/core/: .ls_output.txt  config.py
backend/app/db/: .ls_output.txt  __init__.py  base.py  document.py  model_exports.py  models.py  session.py  structured_record.py
backend/app/schemas/: .ls_output.txt  veterinary_record.py
backend/app/services/: .ls_output.txt  __init__.py  document_service.py  llm_service.py
backend/app/services/extraction/: .ls_output.txt  __init__.py  base.py  docx.py  factory.py  image.py  pdf.py
backend/data/samples/: clinical_history_1.docx  sample.docx
backend/tests/: .ls_output.txt  __init__.py  conftest.py  test_documents.py  test_documents_edgecases.py  test_documents_samples.py  test_health.py
backend/tests/integration/: .ls_output.txt  test_documents.py  test_documents_pipeline.py  test_documents_samples.py  test_persistence.py
backend/tests/unit/: .ls_output.txt  test_documents.py  test_extraction_docx.py  test_extraction_image.py  test_extraction_pdf.py  test_health.py  test_llm_service.py
backend/tests/unit/fixtures/: clinical_history_1_1.txt
frontend/: .dockerignore  Dockerfile  README.md  index.html  (+8 more)
(+41 files in other folders)
