[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vet-insight-engine-backend"
version = "0.1.0"
description = "Veterinary insight document processing engine backend"
requires-python = ">=3.11"
authors = [
    {name = "Barkibu Team", email = "team@barkibu.com"}
]
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pymupdf==1.23.8",
    "python-docx==0.8.11",
    "langchain==0.1.1",
    "openai==1.3.9",
    "python-multipart==0.0.6",
    "aiofiles==23.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "pgvecto-rs==0.2.0",
    "ruff==0.1.8",
    "black==23.12.0",
    "mypy==1.7.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T10", "PIE"]
ignore = ["E501", "W191"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
